--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "gregsimsic/deployer-recipes",
+    "name": "enmielado/deployer-recipes",
     "description": "Deployer recipes",
     "type": "library",
-    "version": "0.5.2",
+    "version": "0.5.3",
     "authors": [
         {
-            "name": "gsimsic",
-            "email": "greg@gregsimsic.com"
+            "name": "veryfine",
+            "email": "info@veryfine.work"
         }
     ]
 }
